package com.lcl.college.service.edu.service.impl;

import com.lcl.college.service.edu.entity.CourseDescription;
import com.lcl.college.service.edu.mapper.CourseDescriptionMapper;
import com.lcl.college.service.edu.service.CourseDescriptionService;
import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
import org.springframework.stereotype.Service;

/**
 * <p>
 * 课程简介 服务实现类
 * </p>
 *
 * @author lcl
 * @since 2020-06-23
 */
@Service
public class CourseDescriptionServiceImpl extends ServiceImpl<CourseDescriptionMapper, CourseDescription> implements CourseDescriptionService {

}
